feat: adopt mist-violet data page app icon